# serializer version: 1
# name: test_add_namespace[JSONGrammar]
  '"The name \'dummy\' is not in the grammar."'
# ---
# name: test_add_namespace[JSONGrammar].1
  '"The name \'x\' is not in the grammar."'
# ---
# name: test_add_namespace[JSONGrammar].2
  "The variable 'x' already has a namespace ('n')."
# ---
# name: test_add_namespace[JSONGrammar].3
  "The variable 'abc' already has a namespace ('cab')."
# ---
# name: test_add_namespace[PydanticGrammar]
  '"The name \'dummy\' is not in the grammar."'
# ---
# name: test_add_namespace[PydanticGrammar].1
  '"The name \'x\' is not in the grammar."'
# ---
# name: test_add_namespace[PydanticGrammar].2
  "The variable 'x' already has a namespace ('n')."
# ---
# name: test_add_namespace[PydanticGrammar].3
  "The variable 'abc' already has a namespace ('cab')."
# ---
# name: test_add_namespace[SimpleGrammar]
  '"The name \'dummy\' is not in the grammar."'
# ---
# name: test_add_namespace[SimpleGrammar].1
  '"The name \'x\' is not in the grammar."'
# ---
# name: test_add_namespace[SimpleGrammar].2
  "The variable 'x' already has a namespace ('n')."
# ---
# name: test_add_namespace[SimpleGrammar].3
  "The variable 'abc' already has a namespace ('cab')."
# ---
# name: test_add_namespace[SimplerGrammar]
  '"The name \'dummy\' is not in the grammar."'
# ---
# name: test_add_namespace[SimplerGrammar].1
  '"The name \'x\' is not in the grammar."'
# ---
# name: test_add_namespace[SimplerGrammar].2
  "The variable 'x' already has a namespace ('n')."
# ---
# name: test_add_namespace[SimplerGrammar].3
  "The variable 'abc' already has a namespace ('cab')."
# ---
# name: test_add_namespace_already_namespaced_reports_prefix[JSONGrammar]
  "The variable 'foo' already has a namespace ('fo')."
# ---
# name: test_add_namespace_already_namespaced_reports_prefix[PydanticGrammar]
  "The variable 'foo' already has a namespace ('fo')."
# ---
# name: test_add_namespace_already_namespaced_reports_prefix[SimpleGrammar]
  "The variable 'foo' already has a namespace ('fo')."
# ---
# name: test_add_namespace_already_namespaced_reports_prefix[SimplerGrammar]
  "The variable 'foo' already has a namespace ('fo')."
# ---
# name: test_delitem_error[JSONGrammar]
  '"The name \'foo\' is not in the grammar."'
# ---
# name: test_delitem_error[PydanticGrammar]
  '"The name \'foo\' is not in the grammar."'
# ---
# name: test_delitem_error[SimpleGrammar]
  '"The name \'foo\' is not in the grammar."'
# ---
# name: test_delitem_error[SimplerGrammar]
  '"The name \'foo\' is not in the grammar."'
# ---
# name: test_getitem_error[JSONGrammar]
  '"The name \'foo\' is not in the grammar."'
# ---
# name: test_getitem_error[PydanticGrammar]
  "'foo'"
# ---
# name: test_getitem_error[SimpleGrammar]
  "'foo'"
# ---
# name: test_getitem_error[SimplerGrammar]
  "'foo'"
# ---
# name: test_init_error[JSONGrammar]
  'The grammar name cannot be empty.'
# ---
# name: test_init_error[PydanticGrammar]
  'The grammar name cannot be empty.'
# ---
# name: test_init_error[SimpleGrammar]
  'The grammar name cannot be empty.'
# ---
# name: test_init_error[SimplerGrammar]
  'The grammar name cannot be empty.'
# ---
# name: test_rename_element_rejects_namespace_separator[JSONGrammar]
  "Element names cannot contain the namespace separator ':': x:y."
# ---
# name: test_rename_element_rejects_namespace_separator[PydanticGrammar]
  "Element names cannot contain the namespace separator ':': x:y."
# ---
# name: test_rename_element_rejects_namespace_separator[SimpleGrammar]
  "Element names cannot contain the namespace separator ':': x:y."
# ---
# name: test_rename_element_rejects_namespace_separator[SimplerGrammar]
  "Element names cannot contain the namespace separator ':': x:y."
# ---
# name: test_rename_error[JSONGrammar]
  '"The name \'foo\' is not in the grammar."'
# ---
# name: test_rename_error[PydanticGrammar]
  '"The name \'foo\' is not in the grammar."'
# ---
# name: test_rename_error[SimpleGrammar]
  '"The name \'foo\' is not in the grammar."'
# ---
# name: test_rename_error[SimplerGrammar]
  '"The name \'foo\' is not in the grammar."'
# ---
# name: test_restrict_to_error[JSONGrammar]
  '"The name \'foo\' is not in the grammar."'
# ---
# name: test_restrict_to_error[PydanticGrammar]
  '"The name \'foo\' is not in the grammar."'
# ---
# name: test_restrict_to_error[SimpleGrammar]
  '"The name \'foo\' is not in the grammar."'
# ---
# name: test_restrict_to_error[SimplerGrammar]
  '"The name \'foo\' is not in the grammar."'
# ---
# name: test_schema[JSONGrammar]
  dict({
    '$schema': 'http://json-schema.org/draft-04/schema',
    'properties': dict({
      'x': dict({
        'type': 'integer',
      }),
      'y': dict({
        'type': 'string',
      }),
    }),
    'type': 'object',
  })
# ---
# name: test_schema[PydanticGrammar]
  dict({
    'properties': dict({
      'x': dict({
        'title': 'X',
        'type': 'integer',
      }),
      'y': dict({
        'title': 'Y',
        'type': 'string',
      }),
    }),
    'required': list([
      'x',
      'y',
    ]),
    'title': 'Model',
    'type': 'object',
  })
# ---
# name: test_schema[SimpleGrammar]
  dict({
    'properties': dict({
      'x': dict({
        'type': 'integer',
      }),
      'y': dict({
        'type': 'string',
      }),
    }),
    'required': list([
      'x',
      'y',
    ]),
    'type': 'object',
  })
# ---
# name: test_schema[SimplerGrammar]
  dict({
    'properties': dict({
      'x': dict({
        'type': 'integer',
      }),
      'y': dict({
        'type': 'string',
      }),
    }),
    'required': list([
      'x',
      'y',
    ]),
    'type': 'object',
  })
# ---
# name: test_update_with_namespace[JSONGrammar]
  "The name 'x' is already mapped to the namespaced name 'n:x'; mapping it to 'other_n:x' would require nesting, which is only allowed for process disciplines."
# ---
# name: test_update_with_namespace[PydanticGrammar]
  "The name 'x' is already mapped to the namespaced name 'n:x'; mapping it to 'other_n:x' would require nesting, which is only allowed for process disciplines."
# ---
# name: test_update_with_namespace[SimpleGrammar]
  "The name 'x' is already mapped to the namespaced name 'n:x'; mapping it to 'other_n:x' would require nesting, which is only allowed for process disciplines."
# ---
# name: test_update_with_namespace[SimplerGrammar]
  "The name 'x' is already mapped to the namespaced name 'n:x'; mapping it to 'other_n:x' would require nesting, which is only allowed for process disciplines."
# ---
# name: test_validate_error_missing_required[JSONGrammar-True]
  '''
  Grammar g: validation failed.
  Missing required names: name.
  '''
# ---
# name: test_validate_error_missing_required[PydanticGrammar-True]
  '''
  Grammar g: validation failed.
  Missing required names: name.
  '''
# ---
# name: test_validate_error_missing_required[SimpleGrammar-True]
  '''
  Grammar g: validation failed.
  Missing required names: name.
  '''
# ---
# name: test_validate_error_missing_required[SimplerGrammar-True]
  '''
  Grammar g: validation failed.
  Missing required names: name.
  '''
# ---
